// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic test constructs 1`] = `
"PASS __tests__/basic.test-constructs.test.js
  ✓ it
  ✓ test
  describe
    ✓ it
    ✓ test

"
`;

exports[`basic test constructs 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       4 passed, 4 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`cannot test with no implementation 1`] = `
"FAIL __tests__/only-constructs.test.js
  ● Test suite failed to run

    Missing second argument. It must be a callback function.

      1 | 
      2 |     it('it', () => {});
    > 3 |     it('it, no implementation');
        |     ^
      4 |     test('test, no implementation');
      5 |   

      at __tests__/only-constructs.test.js:3:5

"
`;

exports[`cannot test with no implementation 2`] = `
"Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`cannot test with no implementation with expand arg 1`] = `
"FAIL __tests__/only-constructs.test.js
  ● Test suite failed to run

    Missing second argument. It must be a callback function.

      1 | 
      2 |     it('it', () => {});
    > 3 |     it('it, no implementation');
        |     ^
      4 |     test('test, no implementation');
      5 |   

      at __tests__/only-constructs.test.js:3:5

"
`;

exports[`cannot test with no implementation with expand arg 2`] = `
"Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`function as descriptor 1`] = `
"PASS __tests__/function-as-descriptor.test.js
  Foo
    ✓ it

"
`;

exports[`function as descriptor 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`only 1`] = `
"PASS __tests__/only-constructs.test.js
  ✓ test.only
  ✓ it.only
  ✓ fit
  ○ skipped 1 test
  fdescribe
    ✓ it
    ✓ test
  describe.only
    ✓ test
    describe
      ✓ test

"
`;

exports[`only 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 skipped, 7 passed, 8 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`only with expand arg 1`] = `
"PASS __tests__/only-constructs.test.js
  ○ it
  ✓ test.only
  ✓ it.only
  ✓ fit
  fdescribe
    ✓ it
    ✓ test
  describe.only
    ✓ test
    describe
      ✓ test

"
`;

exports[`only with expand arg 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 skipped, 7 passed, 8 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`skips 1`] = `
"PASS __tests__/skips-constructs.test.js
  ✓ it
  ○ skipped 4 tests
  xdescribe
    ○ skipped 2 tests
  describe.skip
    ○ skipped 1 test
    describe
      ○ skipped 1 test

"
`;

exports[`skips 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       8 skipped, 1 passed, 9 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`skips with expand arg 1`] = `
"PASS __tests__/skips-constructs.test.js
  ✓ it
  ○ xtest
  ○ xit
  ○ it.skip
  ○ test.skip
  xdescribe
    ○ it
    ○ test
  describe.skip
    ○ test
    describe
      ○ test

"
`;

exports[`skips with expand arg 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       8 skipped, 1 passed, 9 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;
